--- a/toc.html
+++ b/toc.html
@@ -1,41 +1,81 @@
 <!DOCTYPE html>
 <html lang=en>
 <head>
-<title>Author’s Notes</title>
+<title>Table of Contents</title>
 <meta name=viewport content="width=device-width, initial-scale=1.0">
 <link href="https://fonts.googleapis.com/css2?family=Literata:wght@400;500;600;700&display=swap" rel=stylesheet>
 <style>
 body{color:#222;font-family:'Literata',serif;margin:1.5rem;max-width:42rem}
 h1{display:inline-block;font-size:1.75rem;font-weight:600;line-height:1.8rem;margin:1.8rem auto}
-h2{border-top:2px solid;display:inline-block;font-size:1.25rem;font-weight:600;line-height:1.8rem;margin:calc(1.8rem}
-p{font-size:1.0625rem;line-height:1.8rem;margin:0 0 1.8rem;max-width:39rem}
+h2{font-size:1.25rem;font-weight:600;line-height:1.8rem;margin:1.8rem 0}
+p{font-size:1.125rem;line-height:1.8rem;margin:0 0 .9rem;max-width:39rem}
 p.tag{font-size:1.2rem;line-height:1.8rem;margin-left:0}
 a:visited{color:#639}
 a{border-bottom:1px solid #ddd;color:#15c;text-decoration:none}
 a:hover{border-bottom:1px solid #15c;color:#15c}
 footer{border:1px solid #bbb;border-radius:6px;line-height:1.8rem;max-width:39rem;margin:5.4rem auto;padding:1.6rem 1.5rem}
-@media screen and (min-width:39rem) {
-p{margin-left:auto}
+ol{margin:0 0 1.8rem;padding:0 0 0 1.5rem}
+li{margin-left:-.25rem;padding-left:.25rem;font-size:1.125rem;line-height:1.8rem;margin-bottom:.9rem}
+span{margin-right:.75rem}
+@media screen and (min-width:42rem) {
+footer{margin:5.4rem auto}
+body{margin:1.5rem 1.5rem 0}
 }
 @media screen and (min-width:45rem) {
 body{margin:1.5rem auto 0}
-h1{margin-top:3.6rem}
-p{font-size:1.125rem}
 footer{font-size:1.0625rem}
-}  
+}
+@media screen and (min-width:48rem) {
+body{margin:1.5rem auto 0;padding:0 1.5rem}
+h1{margin-top:3.6rem}
+}
 </style>
 </head>
 <body>
-<div><h1>Author’s Notes</h1>
-<p class=tag>On developing <a href=#>studentdevelopment.org</a></p>
-<h2>September 14, 2020</h2>
-<p>Maecenas et commodo nunc, sit amet egestas mi. Nullam vitae rhoncus nunc. <a href=https://www.youtube.com/watch?v=WVErYPCmmeA>Fusce in justo arcu</a>. Mauris mollis accumsan velit quis feugiat. Vestibulum blandit mattis risus, finibus lacinia ligula rhoncus mattis. Fusce ac urna nulla. Pellentesque faucibus dui a cursus ornare.</p><p>Etiam finibus eu justo id sollicitudin. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Morbi faucibus id magna eu vehicula. Integer auctor dignissim ultrices.</p>
-<h2>August 22, 2020</h2>
-<p>Morbi eget aliquet erat, quis blandit augue. Sed volutpat nisl id urna sollicitudin, et dapibus tellus laoreet. Nam tincidunt sodales turpis quis cursus. Cras faucibus, urna eleifend congue accumsan, metus diam sodales augue, at gravida sapien eros non urna. Praesent pretium nunc et lectus sagittis, quis ultricies sem cursus. Donec accumsan pharetra turpis id viverra. Donec aliquet neque eu tincidunt vulputate.</p>
-<h2>August 8, 2020</h2>
-<p>Fusce ac urna nulla. Pellentesque faucibus dui a cursus ornare.</p><p>Etiam finibus eu justo id sollicitudin. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Morbi faucibus id magna eu vehicula. Integer auctor dignissim ultrices.</p>
-<h2>July 14, 2020</h2>
-<p>Maecenas et commodo nunc, sit amet egestas mi. Nullam vitae rhoncus nunc. <a href=https://www.youtube.com/watch?v=WVErYPCmmeA>Fusce in justo arcu</a>. Mauris mollis accumsan velit quis feugiat. Vestibulum blandit mattis risus, finibus lacinia ligula rhoncus mattis.</p></div>
+<h1>Table of Contents</h1>
+<ol>
+<li style=list-style:none><a href=/main>Title Page</a></li>
+<li style=list-style:none><a href=https://www.youtube.com/watch?v=kfIl70TPX28>Preface</a></li>
+</ol>
+<ol>
+<h2>What is Student Development Theory?</h2>
+<li><a href=#>Introduction</a></li>
+<p><span>1.1</span><a href=#>Introduction nic Identity Development nic Identity Development </a></p>
+<p><span>1.2</span><a href=#>Imperative</a></p>
+<li><a href=#>Foundations</a></li>
+<p><span>2.1</span><a href=#>Lorem</a></p>
+<p><span>2.2</span><a href=#>Ipsum</a></p>
+<li><a href=https://www.youtube.com/watch?v=kfIl70TPX28>Applications</a></li>
+<li><a href=#>The Role of Student Affairs Educators in Using Student Development Theory</a></li>
+<h2>Social Identity Development</h2>
+<li><a href=#>Overview</a></li>
+<li><a href=#>Racial Identity Development</a></li>
+<p><span>6.1</span><a href=#>Black Identity</a></p>
+<p><span>6.2</span><a href=#>Asian-American</a></p>
+<li><a href=#>Ethnic Identity Development and Acculturation</a></li>
+<li><a href=#>Sexual Identity Development</a></li>
+<li><a href=#>Gender and Gender Identity Development</a></li>
+<li><a href=#>Development of Faith and Spirituality</a></li>
+<li><a href=#>Disability Identities and Identity Development</a></li>
+<li><a href=#>Social Class and Identity</a></li>
+<li><a href=#>Emerging Theoretical Perspectives on Student Experiences and Identities</a></li>
+<h2>Psychosocial, Cognitive-Structural, and Integrative Development</h2>
+<li><a href=#>Psychosocial Identity Development</a></li>
+<li><a href=#>Epistemological and Intellectual Development</a></li>
+<li><a href=#>Moral Development</a></li>
+<li><a href=#>Development of Self-Authorship</a></li>
+<h2>Critical Theories: The Third Wave</h2>
+<li><a href=#>Critical Race Theory</a></li>
+<li><a href=#>Intersectionality and Student Development</a></li>
+<li><a href=#>(Re)Framing Student Development Using Critical Feminist Theories</a></li>
+<li><a href=#>Indigenous Paradigms</a></li>
+<li><a href=#>Queer Theory</a></li>
+<li><a href=#>Crip Theory</a></li>
+<h2><a href=#>References</a></h2>
+<h2><a href=#>Author’s Notes</a></h2>
+</ol>
+</ol>
+</nav>
 <footer>This website is licensed under a <a class=footer href=#>CC BY-NC 4.0 International License</a>. It was created and is maintained by <a class=footer href=#>Jessy Cheung</a>. If you like this resource and want to support its development, you can <a class=footer href=#>buy Jessy a coffee</a>.</footer>
 </body>
 </html>
