--- a/main2.html
+++ b/main2.html
@@ -17,7 +17,7 @@ max-width:42rem
 h1 {
 font-size:1.75rem;
 font-weight:600;
-margin:3.6rem 0 1.8rem;
+margin:1.8rem 0;
 }
 
 p.tag {
@@ -62,14 +62,14 @@ padding:1.5rem
 }
 
 @media screen and (min-width:45rem){
-body{margin:1.5rem auto 0}
-footer{font-size:1.0625rem}
+body {margin:1.5rem auto 0}
+h1 {margin-top:3.6rem}
+footer {font-size:1.0625rem}
 }
 </style>
 
 </head>
 <body>
-
 <h1>SDO</h1>
 <p class=tag>A practical guide to college student development theory</p>
 <nav>
