--- a/main2.html
+++ b/main2.html
@@ -15,10 +15,9 @@ max-width:42rem
 }
 
 h1 {
-display:inline-block;
 font-size:1.75rem;
 font-weight:600;
-margin:1.8rem 0;
+margin:3.6rem 0 1.8rem;
 }
 
 p.tag {
@@ -64,7 +63,7 @@ padding:1.5rem
 
 @media screen and (min-width:45rem){
 body {margin:1.5rem auto 0}
-h1 {margin-top:3.6rem}
+h1 {margin-top:5.4rem}
 footer {font-size:1.0625rem}
 }
 </style>
