--- a/main2.html
+++ b/main2.html
@@ -6,65 +6,20 @@
 <link href="https://fonts.googleapis.com/css2?family=Literata:ital,wght@0,400;0,600;1,400&display=swap" rel="stylesheet">
 
 <style>
-body {
-color:#222;
-font-family: 'Literata', serif;
-line-height:1.8rem;
-margin:1.5rem;
-max-width:42rem
-}
-
-h1 {
-font-size:1.75rem;
-font-weight:600;
-margin:3.6rem 0 1.8rem;
-}
-
-p.tag {
-font-size:1.2rem;
-margin:0 0 3.6rem;
-}
-
-nav {
-font-size:1.125rem;
-margin:0 0 5.4rem;
-}
-
-ul {
-padding:0;
-}
-
-li {
-list-style:none;
-margin-bottom:0.9rem;
-}
-
-a {
-color:#15c;
-border-bottom:1px solid #ddd;
-text-decoration:none;
-}
-
-a:visited {
-color:#639;
-}
-
-a:hover {
-color:#15c;
-border-bottom:1px solid #15c;
-}
-
-footer {
-border:1px solid #bbb;
-border-radius:6px;
-margin:0 0 5.4rem;
-padding:1.5rem
-}
-
-@media screen and (min-width:45rem){
-body {margin:1.5rem auto 0}
-h1 {margin-top:5.4rem}
-footer {font-size:1.0625rem}
+body{color:#222;font-family:'Literata',serif;line-height:1.8rem;margin:1.5rem;max-width:42rem}
+h1{font-size:1.75rem;font-weight:600;margin:3.6rem 0 1.8rem}
+p.tag{font-size:1.2rem;margin:0 0 3.6rem}
+nav{font-size:1.125rem;margin:0 0 5.4rem}
+ul{padding:0}
+li{list-style:none;margin-bottom:.9rem}
+a{color:#15c;border-bottom:1px solid #ddd;text-decoration:none}
+a:visited{color:#639}
+a:hover{color:#15c;border-bottom:1px solid #15c}
+footer{border:1px solid #bbb;border-radius:6px;margin:0 0 5.4rem;padding:1.5rem}
+@media screen and (min-width:45rem) {
+body{margin:1.5rem auto 0}
+h1{margin-top:5.4rem}
+footer{font-size:1.0625rem}
 }
 </style>
 
