--- a/notes2.html
+++ b/notes2.html
@@ -14,7 +14,7 @@ border-top:2px solid;
 display:inline-block;
 font-size:1.25rem;
 font-weight:600;
-margin:1.8rem 0;
+margin:calc(1.8rem - 2px) 0 1.8rem;
 }
 
 p{font-size:1.0625rem;margin:0 0 1.8rem;max-width:39rem;}
