--- a/notes2.html
+++ b/notes2.html
@@ -4,30 +4,19 @@
 <title>TITLE</title>
 <meta name=viewport content="width=device-width, initial-scale=1.0">
 <link href="https://fonts.googleapis.com/css2?family=Literata:ital,wght@0,400;0,600;1,400&display=swap" rel="stylesheet">
-
 <style>
 body{color:#222;font-family:'Literata',serif;line-height:1.8rem;margin:1.5rem;max-width:42rem}
 h1{font-size:1.75rem;font-weight:600;margin:3.6rem 0 1.8rem}
-
-h2{
-border-top:2px solid;
-display:inline-block;
-font-size:1.25rem;
-font-weight:600;
-margin:calc(1.8rem - 2px) 0 1.8rem;
-}
-
-p{font-size:1.0625rem;margin:0 0 1.8rem;max-width:39rem;}
+h2{border-top:2px solid;display:inline-block;font-size:1.25rem;font-weight:600;margin:calc(1.8rem - 2px) 0 1.8rem}
+p{font-size:1.0625rem;margin:0 0 1.8rem;max-width:39rem}
 p.tag{font-size:1.2rem;margin:0 0 1.8rem}
 a{color:#15c;border-bottom:1px solid #ddd;text-decoration:none}
 a:visited{color:#639}
 a:hover{color:#15c;border-bottom:1px solid #15c}
-footer{border:1px solid #bbb;border-radius:6px;margin:5.4rem 0 5.4rem;padding:1.5rem}
-
+footer{border:1px solid #bbb;border-radius:6px;margin:5.4rem 0;padding:1.5rem}
 @media screen and (min-width:39rem) {
-p{margin-left:auto;
+p{margin-left:auto}
 }
-
 @media screen and (min-width:45rem) {
 body{margin:1.5rem auto}
 h1{margin-top:5.4rem}
@@ -35,7 +24,6 @@ p{font-size:1.125rem}
 footer{font-size:1.0625rem}
 }
 </style>
-
 </head>
 <body>
 <h1>Author’s Notes</h1>
