--- a/main2.html
+++ b/main2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang=en>
 <head>
-<title>TITLE</title>
+<title>Main (Final)</title>
 <meta name=viewport content="width=device-width, initial-scale=1.0">
 <link href="https://fonts.googleapis.com/css2?family=Literata:ital,wght@0,400;0,600;1,400&display=swap" rel="stylesheet">
 <style>
