--- a/toc2.html
+++ b/toc2.html
@@ -59,6 +59,7 @@ padding:0;
 @media screen and (min-width:45rem) {
 body{margin:1.5rem auto 0}
 h1{margin-top:5.4rem}
+p,li{font-size:1.125rem}
 footer{font-size:1.0625rem}
 }
 
