--- a/main2.html
+++ b/main2.html
@@ -6,7 +6,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Literata:ital,wght@0,400;0,600;1,400&display=swap" rel="stylesheet">
 <style>
 body{color:#222;font-family:'Literata',serif;line-height:1.8rem;margin:1.5rem;max-width:42rem}
-h1{font-size:1.75rem;font-weight:600;margin:3.6rem 0 1.8rem}
+h1{font-size:1.6rem;font-weight:600;margin:3.6rem 0 1.8rem}
 p.tag{font-size:1.2rem;margin:0 0 3.6rem}
 nav{font-size:1.125rem;margin:0 0 5.4rem}
 ul{padding:0}
@@ -23,7 +23,7 @@ footer{font-size:1.0625rem}
 </style>
 </head>
 <body>
-<h1>SDO</h1>
+<h1>The Praxis of Student Development</h1>
 <p class=tag>A practical guide to college student development theory</p>
 <nav>
 <ul>
