--- a/toc2.html
+++ b/toc2.html
@@ -7,7 +7,7 @@
 <style>
 body{color:#222;font-family:'Literata',serif;line-height:1.8rem;margin:1.5rem;max-width:42rem}
 h1{font-size:1.6rem;font-weight:600;margin:3.6rem 0 1.8rem}
-h2{border-top:2px solid;display:inline-block;font-size:1.25rem;font-weight:600;margin:calc(1.8rem - 2px) 0 1.8rem}
+h2{border-top:2px solid;display:inline-block;font-size:1.25rem;font-weight:600;margin:calc(1.8rem - 2px) 0 1.8rem -1.5rem}
 p{font-size:1.0625rem;margin:0 0 .9rem}
 span{margin-right:.75rem}
 a{color:#15c;border-bottom:1px solid #ddd;text-decoration:none}
